# pixel_art_diffusion

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: cml_data.yaml  codecheck.yaml  pre_commit.yaml  tests.yaml
configs/: cloud_config.yaml  config.yaml  sweep.yaml
data/raw/: archive.zip.dvc
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: prototyping.ipynb
reports/: README.md
src/pixel_art_diffusion/: data.py  generate_sample.py  model.py  run_profiling.py  train.py  visualize.py
tests/: __init__.py  pytest.ini  test_data.py  test_model.py  test_train.py
