[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel_art_diffusion"
version = "0.0.1"
description = "Diffusion model for pixel art generation."
authors = [
  { name = "Gustav Toft", email = "gtoft98@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
train = "src.pixel_art_diffusion.train:main"
evaluate = "src.pixel_art_diffusion.evaluate:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
